# fruity

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  data.dvc  foods_101.7z.dvc  fruits_360.7z.dvc  modelfoods_101.pth.dvc  pyproject.toml  requirements.txt  setup.cfg
.dvc/: config
.github/workflows/: ruff.yaml  tests.yaml
app/backend/: fruity_api.py  idx_to_class.json  requirements.txt  setup_model.py
app/frontend/: streamlit_frontend.py
conf/: sweep.yml  train.yaml
conf/datamodule/: foods_101.yaml  fruits_360.yaml
conf/experiment/: convnext.yaml  experiment1.yaml  sweep.yml  train-gpu.yaml  train_food.yaml
conf/logging/: wandb.yaml
conf/model/: timm_model.yaml
conf/paths/: default.yaml
conf/trainer/: default.yaml  gpu.yaml
conf/wandb/: wandb.yaml
dockerfiles/: api.dockerfile  gc.api.dockerfile  local.api.dockerfile  trainer.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
reports/: README.md  report.html  report.py
src/: __init__.py
src/fruity/: __init__.py  figuring.json  predict_model.py  train.py
src/fruity/models/: __init__.py  (+2 more)
tests/: __init__.py  predict_model.py  test_model.py  test_training.py  train_model.py
tests/datamodules/: test_fruits360.py
wandb/run-20240115_120247-dbcps3is/: run-dbcps3is.wandb
wandb/run-20240115_122809-awrlimjk/: run-awrlimjk.wandb
wandb/run-20240115_123122-4d6vlbuw/: run-4d6vlbuw.wandb
wandb/run-20240115_123241-2w4tfuzb/: run-2w4tfuzb.wandb
wandb/run-20240115_133945-0k2wge8t/: run-0k2wge8t.wandb
wandb/sweep-jef75q5l/: config-611mko8q.yaml  config-dvt9x6fy.yaml
(+28 files in other folders)
